--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.3.1",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.4.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
